RESOLVED FIXED282695
[WebGPU] Some internal builds are broken
https://bugs.webkit.org/show_bug.cgi?id=282695
Summary [WebGPU] Some internal builds are broken
Mike Wyrzykowski
Reported 2024-11-06 09:46:28 PST
[WebGPU] Some internal builds are broken
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-06 09:46:46 PST
Mike Wyrzykowski
Comment 2 2024-11-06 09:47:55 PST
EWS
Comment 3 2024-11-06 10:51:14 PST
Committed 286228@main (27d357307c45): <https://commits.webkit.org/286228@main> Reviewed commits have been landed. Closing PR #36265 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.