[WebGPU] Some internal builds are broken ( https://bugs.webkit.org/show_bug.cgi?id=282695 rdar://139365861

Unreviewed SDK build fix.

* Source/WebGPU/WebGPU/WebGPU.h:
This file will only compile in C++ contexts.

Canonical link: https://commits.webkit.org/286228@main